# django_backups

./: .gitignore  manage.py  pyproject.toml
backup/: 20230610_054847.db
backups/: admin.py  db_connectors.py  forms.py  media_manager.py  models.py
backups/migrations/: 0001_initial.py  0002_backup_restore_delete_databasebackup.py  0003_restore_file.py
django_backups/: asgi.py  settings.py  urls.py  wsgi.py
static/: uncommon questions in django-python.odt
