[tool.poetry]
name = "django_backups"
version = "0.1.0"
description = ""
authors = ["Abhijeet pal <abhijeetpal321@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.2"
psycopg2 = "^2.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
